@@ -1,6 +1,6 @@
 [metadata]
 name = planegeometry
-version = 1.0.1
+version = 1.0.2
 author = Andrzej Kapanowski
 author_email = andrzej.kapanowski@uj.edu.pl
 description = Python implementation of algorithms and data structures from plane geometry
